// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relationships should render dashboards normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
  size="m"
>
  <EuiFlyoutHeader>
    <EuiTitle>
      <h2>
        <EuiIcon
          size="m"
          type="dashboardApp"
        />
          
        MyDashboard
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiDescriptionList
      align="left"
      compressed={false}
      type="row"
    >
      <React.Fragment
        key="visualizations"
      >
        <EuiDescriptionListTitle
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
        >
          <p>
            Here are some visualizations used on this dashboard. You can safely delete this dashboard and the visualizations will still work properly.
          </p>
        </EuiDescriptionListTitle>
        <React.Fragment>
          <EuiDescriptionListDescription
            key="1"
          >
            <EuiLink
              color="primary"
              href="#/visualize/edit/1"
              type="button"
            >
              <EuiIcon
                size="s"
                type="visualizeApp"
              />
               
            </EuiLink>
          </EuiDescriptionListDescription>
          <EuiDescriptionListDescription
            key="2"
          >
            <EuiLink
              color="primary"
              href="#/visualize/edit/2"
              type="button"
            >
              <EuiIcon
                size="s"
                type="visualizeApp"
              />
               
            </EuiLink>
          </EuiDescriptionListDescription>
        </React.Fragment>
      </React.Fragment>
    </EuiDescriptionList>
  </EuiFlyoutBody>
  <EuiFlyoutFooter>
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      gutterSize="l"
      justifyContent="spaceBetween"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          color="primary"
          iconSide="left"
          onClick={[MockFunction]}
          size="s"
          type="button"
        >
          Close
        </EuiButtonEmpty>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlyoutFooter>
</EuiFlyout>
`;

exports[`Relationships should render errors 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
  size="m"
>
  <EuiFlyoutHeader>
    <EuiTitle>
      <h2>
        <EuiIcon
          size="m"
          type="dashboardApp"
        />
          
        MyDashboard
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiCallOut
      color="danger"
      size="m"
      title="Error"
    >
      foo
    </EuiCallOut>
  </EuiFlyoutBody>
  <EuiFlyoutFooter>
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      gutterSize="l"
      justifyContent="spaceBetween"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          color="primary"
          iconSide="left"
          onClick={[MockFunction]}
          size="s"
          type="button"
        >
          Close
        </EuiButtonEmpty>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlyoutFooter>
</EuiFlyout>
`;

exports[`Relationships should render index patterns normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
  size="m"
>
  <EuiFlyoutHeader>
    <EuiTitle>
      <h2>
        <EuiIcon
          size="m"
          type="indexPatternApp"
        />
          
        MyIndexPattern*
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiDescriptionList
      align="left"
      compressed={false}
      type="row"
    >
      <React.Fragment
        key="searches"
      >
        <EuiDescriptionListTitle
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
        >
          <EuiCallOut
            color="warning"
            size="m"
            title="Warning"
          >
            <p>
              Here are some saved searches that use this index pattern. If you delete this index pattern, these saved searches will not longer work properly.
            </p>
          </EuiCallOut>
        </EuiDescriptionListTitle>
        <React.Fragment>
          <EuiDescriptionListDescription
            key="1"
          >
            <EuiLink
              color="primary"
              href="#/discover/1"
              type="button"
            >
              <EuiIcon
                size="s"
                type="search"
              />
               
            </EuiLink>
          </EuiDescriptionListDescription>
        </React.Fragment>
      </React.Fragment>
      <React.Fragment
        key="visualizations"
      >
        <EuiDescriptionListTitle
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
        >
          <EuiCallOut
            color="warning"
            size="m"
            title="Warning"
          >
            <p>
              Here are some visualizations that use this index pattern. If you delete this index pattern, these visualizations will not longer work properly.
            </p>
          </EuiCallOut>
        </EuiDescriptionListTitle>
        <React.Fragment>
          <EuiDescriptionListDescription
            key="2"
          >
            <EuiLink
              color="primary"
              href="#/visualize/edit/2"
              type="button"
            >
              <EuiIcon
                size="s"
                type="visualizeApp"
              />
               
            </EuiLink>
          </EuiDescriptionListDescription>
        </React.Fragment>
      </React.Fragment>
    </EuiDescriptionList>
  </EuiFlyoutBody>
  <EuiFlyoutFooter>
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      gutterSize="l"
      justifyContent="spaceBetween"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          color="primary"
          iconSide="left"
          onClick={[MockFunction]}
          size="s"
          type="button"
        >
          Close
        </EuiButtonEmpty>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlyoutFooter>
</EuiFlyout>
`;

exports[`Relationships should render searches normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
  size="m"
>
  <EuiFlyoutHeader>
    <EuiTitle>
      <h2>
        <EuiIcon
          size="m"
          type="search"
        />
          
        MySearch
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiDescriptionList
      align="left"
      compressed={false}
      type="row"
    >
      <React.Fragment
        key="indexPatterns"
      >
        <EuiDescriptionListTitle
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
        >
          <p>
            Here is the index pattern tied to this saved search.
          </p>
        </EuiDescriptionListTitle>
        <React.Fragment>
          <EuiDescriptionListDescription
            key="1"
          >
            <EuiLink
              color="primary"
              href="#/management/kibana/indices/1"
              type="button"
            >
              <EuiIcon
                size="s"
                type="indexPatternApp"
              />
               
            </EuiLink>
          </EuiDescriptionListDescription>
        </React.Fragment>
      </React.Fragment>
      <React.Fragment
        key="visualizations"
      >
        <EuiDescriptionListTitle
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
        >
          <EuiCallOut
            color="warning"
            size="m"
            title="Warning"
          >
            <p>
              Here are some visualizations that use this saved search. If you delete this saved search, these visualizations will not longer work properly.
            </p>
          </EuiCallOut>
        </EuiDescriptionListTitle>
        <React.Fragment>
          <EuiDescriptionListDescription
            key="2"
          >
            <EuiLink
              color="primary"
              href="#/visualize/edit/2"
              type="button"
            >
              <EuiIcon
                size="s"
                type="visualizeApp"
              />
               
            </EuiLink>
          </EuiDescriptionListDescription>
        </React.Fragment>
      </React.Fragment>
    </EuiDescriptionList>
  </EuiFlyoutBody>
  <EuiFlyoutFooter>
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      gutterSize="l"
      justifyContent="spaceBetween"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          color="primary"
          iconSide="left"
          onClick={[MockFunction]}
          size="s"
          type="button"
        >
          Close
        </EuiButtonEmpty>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlyoutFooter>
</EuiFlyout>
`;

exports[`Relationships should render visualizations normally 1`] = `
<EuiFlyout
  onClose={[MockFunction]}
  size="m"
>
  <EuiFlyoutHeader>
    <EuiTitle>
      <h2>
        <EuiIcon
          size="m"
          type="visualizeApp"
        />
          
        MyViz
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiDescriptionList
      align="left"
      compressed={false}
      type="row"
    >
      <React.Fragment
        key="dashboards"
      >
        <EuiDescriptionListTitle
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
        >
          <EuiCallOut
            color="warning"
            size="m"
            title="Warning"
          >
            <p>
              Here are some dashboards which contain this visualization. If you delete this visualization, these dashboards will no longer show them.
            </p>
          </EuiCallOut>
        </EuiDescriptionListTitle>
        <React.Fragment>
          <EuiDescriptionListDescription
            key="1"
          >
            <EuiLink
              color="primary"
              href="#/dashboard/1"
              type="button"
            >
              <EuiIcon
                size="s"
                type="dashboardApp"
              />
               
            </EuiLink>
          </EuiDescriptionListDescription>
          <EuiDescriptionListDescription
            key="2"
          >
            <EuiLink
              color="primary"
              href="#/dashboard/2"
              type="button"
            >
              <EuiIcon
                size="s"
                type="dashboardApp"
              />
               
            </EuiLink>
          </EuiDescriptionListDescription>
        </React.Fragment>
      </React.Fragment>
    </EuiDescriptionList>
  </EuiFlyoutBody>
  <EuiFlyoutFooter>
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      gutterSize="l"
      justifyContent="spaceBetween"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButtonEmpty
          color="primary"
          iconSide="left"
          onClick={[MockFunction]}
          size="s"
          type="button"
        >
          Close
        </EuiButtonEmpty>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlyoutFooter>
</EuiFlyout>
`;
